5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1638_2450.log
== TEST (2019-04-09 13:28:13) 
-- CODE:
a = input("nome 1:")
b = input("nome 2:")

if(a.upper() > b.upper()):
	print(a)
	print(b)
	else:
		print(b)
		print(a)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:28:25) 
-- CODE:
a = input("nome 1:")
b = input("nome 2:")

if(a.upper() > b.upper()):
	print(a)
	print(b)
	else:
	print(b)
	print(a)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:28:41) 
-- CODE:
a = input("nome 1:")
b = input("nome 2:")

if(a.upper() > b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:29:46) 
-- CODE:
a = input("nome 1:")
b = input("nome 2:")

if(a.upper() > b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:30:07) 
-- CODE:
a = input("nome 1:")
b = input("nome 2:")

if(a.upper() > b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:31:11) 
-- CODE:
a = input("nome 1:")
b = input("nome 2:")

if(a.upper() < b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:31:38) 
-- CODE:
a = input("nome 1:")
b = input("nome 2:")

if(a.upper() < b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- EXECUTION TIME:
0.151741
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:41:53) 
-- CODE:
a = input("nome 1:")
b = input("nome 2:")

if(a.upper() < b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- EXECUTION TIME:
0.19032
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
